add wire width setting

--- a/circuit/PCB_design/kicad_20220803.md
+++ b/circuit/PCB_design/kicad_20220803.md
@@ -89,6 +89,10 @@
 |  ﾁｮｯﾄ電流が流れる線  |  0.5  |
 |  電源線  |  1.0  |  
 
+ここから線の幅は増やせる  
+![wire_setting](images/wire_width.png)  
+なんか英語モードになってるけど気にしたら負け  
+
 ## 配線用語  
 
 - ベタ  
@@ -108,7 +112,6 @@
 基板外形は指定しないが、69x40mm程度に収めるのを目標にすると良いかもしれない
 
 ***
-
 ### 夏休み中にできるようになってほしいこと  
 
 - 自分で考えた回路図を描いて、それを基板に起す  
