minor fixes about pcb_thermal_design and kicad

--- a/circuit/PCB_design/kicad_20220803.md
+++ b/circuit/PCB_design/kicad_20220803.md
@@ -119,7 +119,7 @@
 ### 一年生の間にできるようになってほしいこと  
 
 - ユーザビリティを考慮した設計  
-  - コネクタの一とか
+  - コネクタの位置とか
 - 未知の部品の使い方を自分で調べてそれを使用した回路図を描けるようになる  
 
 ### いつかできるようになってほしいこと  
